# quillix

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py  requirements.txt  run.sh  test_discord.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  service.py  service_manager.py
backend/app/routes/: __init__.py  discord_routes.py  system_routes.py
backend/app/services/: __init__.py  discord_service.py
quillix_scraper/: __init__.py  cli.py  config.py  requirements.txt
quillix_scraper/core/: __init__.py  cache.py  fetcher.py  scraper.py
quillix_scraper/models/: trend.py
scraper/: pyproject.toml  requirements.txt
scraper/quillix_scraper/: config.py
scraper/quillix_scraper/models/: __init__.py
scraper/quillix_scraper/scrapers/: __init__.py  techcrunch.py
